Fix table cards label and alignment

--- a/source/css/scss/_card.scss
+++ b/source/css/scss/_card.scss
@@ -433,6 +433,7 @@
       padding-top: 1.5rem;
       padding-bottom: 1.5rem;
     }
+    td:first-child,
     th:first-child {
       text-align: left;
       padding-left: 2rem;
